--- a/dev/style.css
+++ b/dev/style.css
@@ -2,8 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  margin: 0;
-  padding: 5px;
+  /* margin: 0;
+  padding: 5px; */
 }
 
 :root{
@@ -22,8 +22,8 @@
 body{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  width: 400px;
-  margin: auto;
+  max-width: 800px;
+  margin: var(--spacing-regular) auto;
 }
 
 /* mobile layout approach*/
@@ -32,17 +32,28 @@ body{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas: 
+    "search search"
     "current current"
     "hourly hourly"
     "fiveday fiveday"
     "feelslike humidity";
   gap: var(--spacing-small);
+  margin: var(--spacing-regular);
 }
+
 
 .container, .container > article {
   border: 2px solid;
   border-radius: var(--spacing-small);
   padding: var(--spacing-small)
+}
+
+#search {
+  grid-area: search;
+  border: 2px solid;
+  border-radius: var(--spacing-small);
+  font-size: var(--font-regular);
+  padding: var(--spacing-small);
 }
 
 /* style related to current weather */
@@ -54,6 +65,7 @@ body{
 
 #current-forecast .temp{
   font-size: var(--font-xl);
+  margin: var(--spacing-regular);
 }
 
 #current-forecast .description{
@@ -102,14 +114,39 @@ body{
   text-align: center;
 }
 
+
+
 #five-day-forecast .five-day-container{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  grid-auto-flow: column;
-  grid-auto-columns: minmax(100px, 1fr);
-  overflow-x: auto;
-  gap: var(--spacing-medium)
+  grid-auto-flow: row;
+  
 }
+
+.five-day-container .day-wise-forecast {
+  display: grid;
+  grid-template: auto / repeat(4, 1fr);
+  gap: var(--spacing-regular);
+  place-items: center;
+}
+
+.five-day-container .day-wise-forecast .temp-low,
+.five-day-container .day-wise-forecast .temp-high{
+  font-size: var(--font-regular);
+  font-weight: var(--font-semibold);
+}
+
+.five-day-container .day-wise-forecast .temp-low{
+  opacity: 60%;
+}
+
+.five-day-container .day-wise-forecast .icon{
+  width: 75px;
+  height: 75px;
+  
+
+}
+
+
 
 #feels-like {
   grid-area: feelslike;
@@ -119,4 +156,16 @@ body{
 #humidity {
   grid-area: humidity;
   text-align: center;
+}
+
+
+@media (width >= 650px){
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: 
+      "search search search search"
+      "current current current current"
+      "hourly hourly fiveday fiveday"
+      "feelslike humidity fiveday fiveday";
+  }
 }
