--- a/dev/style.css
+++ b/dev/style.css
@@ -56,6 +56,12 @@ body{
   padding: var(--spacing-small);
 }
 
+#search::-webkit-calendar-picker-indicator {
+  display: none !important;
+}
+
+
+
 /* style related to current weather */
 
 #current-forecast{
