--- a/dev/style.css
+++ b/dev/style.css
@@ -46,7 +46,7 @@ body{
 .container, .container > article {
   border: 2px solid;
   border-radius: var(--spacing-small);
-  margin: var(--spacing-medium);
+  margin: var(--spacing-small);
   padding: var(--spacing-medium);
 }
 
@@ -56,7 +56,7 @@ body{
   border-radius: var(--spacing-small);
   font-size: var(--font-semiregular);
   padding: var(--spacing-medium);
-  margin: var(--spacing-medium);
+  margin: var(--spacing-small);
 
 }
 
