--- a/dev/style.css
+++ b/dev/style.css
@@ -17,29 +17,14 @@
   --font-xl: 4rem;
   --font-semibold: 600;
   --color-grey : #e2e2e2;
+  --font-color: #fff;
 }
 
 :focus{outline: none;}
 
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  max-width: 800px;
-  margin: var(--spacing-regular) auto;
-  /* background-color: aquamarine; */
-}
-
 ::-webkit-scrollbar {
   width: 12px;
   height: 12px;
-}
-
-::-webkit-scrollbar-track {
-  /* background-color: rgba(100, 100, 100, .5); */
 }
 
 ::-webkit-scrollbar-thumb {
@@ -49,9 +34,42 @@ body {
   background-clip: content-box;
 }
 
-/* mobile layout approach*/
+html {
+  scroll-behavior: smooth;
+  margin: 0;
+}
 
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--font-color);
+}
+
+.mainContainer{
+  max-width: 800px;
+  margin: 0 auto;
+  position: relative
+}
+
+#background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  filter: blur(3px);
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: background .5s ease;
+}
+
+/* mobile layout approach*/
+#canvas{
+  display: none;
+}
 .container {
+  margin: 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas:
@@ -62,10 +80,14 @@ body {
     "fiveday fiveday"
     "feelslike humidity";
   gap: var(--spacing-small);
-  margin: var(--spacing-small);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  transition: background .5s ease;
+
 }
 
-.container,
+
 .container > article {
   border-radius: var(--spacing-small);
   margin: var(--spacing-small);
@@ -85,12 +107,27 @@ body {
   font-size: var(--font-semiregular);
   grid-area: underlinedInput;
   border: 0; 
-  padding: 7px 0; 
-  border-bottom: 1px solid #ccc;
+  padding: var(--spacing-medium); 
+  color: var(--font-color);
+  background-color: transparent;
+  border-bottom: 2px solid #ccc;
   border-radius: var(--spacing-small) var(--spacing-small) 0 0 ;
 }
 
+#search::-webkit-search-cancel-button{
+  appearance: none;
+  height: var(--font-regular);
+  width: var(--font-regular);
+  background-image: url("../appImages/clear.svg");
+  background-size: var(--font-regular);
+  filter:grayscale(0)
+  
+}
 
+#search::placeholder{
+  color: var(--font-color);
+  opacity: 60%;
+}
 
 #search ~ .focus-border {
   position: absolute; 
@@ -98,7 +135,7 @@ body {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: #4caf50;
+  background-color: var(--font-color);
   transition: 0.3s;
 }
 #search:focus ~ .focus-border {
@@ -115,7 +152,7 @@ body {
 #current-forecast {
   grid-area: current;
   text-align: center;
-  box-shadow: 1px 1px 5px 1px rgba(74, 74, 74, 0.71);
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
 
 #current-forecast .temp {
@@ -143,7 +180,7 @@ body {
 #hourly-forecast {
   grid-area: hourly;
   text-align: center;
-  box-shadow: 1px 1px 5px 1px rgba(74, 74, 74, 0.71);
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
 
 #hourly-forecast .hourly-container {
@@ -171,7 +208,8 @@ body {
 #five-day-forecast {
   grid-area: fiveday;
   text-align: center;
-  box-shadow: 1px 1px 5px 1px rgba(74, 74, 74, 0.71);
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+
 }
 
 #five-day-forecast .five-day-container {
@@ -193,7 +231,7 @@ body {
 }
 
 .five-day-container .day-wise-forecast .temp-low {
-  opacity: 60%;
+  opacity: 70%;
 }
 
 .five-day-container .day-wise-forecast .icon {
@@ -204,7 +242,7 @@ body {
 #feels-like,
 #humidity {
   font-weight: var(--font-semibold);
-  box-shadow: 1px 1px 5px 1px rgba(74, 74, 74, 0.71);
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
 
 #feels-like {
