--- a/style.css
+++ b/style.css
@@ -47,7 +47,10 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   color: var(--font-color);
-  background-color: var(--bg-color-1);
+  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(186,210,235,1) 0%, rgba(34,71,128,1) 100%, rgba(33,80,145,1) 100%);
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 100vh;
 }
 
 .opacity-20{
@@ -65,6 +68,14 @@ body {
   max-width: 800px;
   margin: 0 auto;
   position: relative
+}
+
+.header{
+  padding: var(--spacing-small);
+  font-size: var(--font-semiregular);
+  font-weight: var(--font-semibold);
+  text-align: center;
+  background-color: #142a4d;
 }
 
 #background {
@@ -118,6 +129,7 @@ body {
   position: relative;
   max-width: 100%;
   margin: var(--spacing-small);
+  border-radius: var(--spacing-small) var(--spacing-small) 0 0 ;
 }
 
 #search {
@@ -129,7 +141,6 @@ body {
   color: var(--font-color);
   background-color: transparent;
   border-bottom: 2px solid var(--color-grey-2);
-  border-radius: var(--spacing-small) var(--spacing-small) 0 0 ;
 }
 
 #search::-webkit-search-cancel-button{
