--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(186,210,235,1) 0%, rgba(34,71,128,1) 100%, rgba(33,80,145,1) 100%);
   background-repeat: no-repeat;
   background-size: contain;
-  height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 .opacity-20{
