--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .opacity-20:hover{
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(240, 240, 240, 0.14) 0px 3px 8px;
 }
 
 
@@ -182,6 +182,7 @@ body {
 .container  #location-denied{
   grid-area: errorMessage;
   margin: var(--spacing-small);
+  font-weight: var(--font-semibold);
   color: var(--color-error);
 }
 
@@ -200,6 +201,13 @@ body {
   transition: all .5s ease-in;
 }
 
+.h-divider{
+  margin: 0 auto;
+  /* height: 2px; */
+  border-bottom: 2px solid var(--color-grey);
+  opacity: 50%;
+}
+
 /* style related to current weather */
 
 #current-forecast {
@@ -210,6 +218,14 @@ body {
 #current-forecast .temp {
   font-size: var(--font-xl);
   margin: var(--spacing-regular);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#current-forecast .city {
+  font-size: var(--font-large);
+  margin: var(--spacing-regular) auto;
 }
 
 #current-forecast .icon {
@@ -224,8 +240,12 @@ body {
 
 #current-forecast .description,
 #current-forecast .min-max-temp {
-  font-size: var(--font-regular);
+  font-size: var(--font-semiregular);
   font-weight: var(--font-semibold);
+}
+
+.min-max-temp .current-min-temp{
+  opacity: 70%;
 }
 
 /* styles related to hourly forecast */
@@ -240,7 +260,24 @@ body {
   grid-auto-flow: column;
   grid-auto-columns: minmax(100px, 1fr);
   overflow-x: auto;
-  gap: var(--spacing-medium);
+  margin: auto;
+  grid-gap: var(--spacing-medium);
+}
+
+.hourly-container .h-block{
+  display: inline-flex;
+}
+.hourly-container .h-block:after{
+  content: "";
+  display: inline-block;
+  margin: auto 0;
+  height: 80%;
+  border-left: 2px solid var(--color-grey);
+  opacity: 50%;
+}
+
+.hourly-container .h-block:last-child:after{
+  display: none;
 }
 
 #hourly-forecast .hourly-container .time {
@@ -262,9 +299,19 @@ body {
 
 }
 
+
 #five-day-forecast .five-day-container {
   display: grid;
   grid-auto-flow: row;
+}
+
+.five-day-container .h-divider{
+  width: 90%;
+}
+
+
+.five-day-container .h-divider:last-child{
+  display: none;
 }
 
 .five-day-container .day-wise-forecast {
@@ -294,6 +341,12 @@ body {
   font-weight: var(--font-semibold);
 }
 
+
+.feels-like-temp,
+.humidity-value {
+  font-size: var(--font-semiregular);
+}
+
 #feels-like {
   grid-area: feelslike;
   text-align: center;
@@ -321,7 +374,8 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas:
-      "currentLocationCity currentWeatherIcon"
+      "currentLocationCity currentLocationCity"
+      "divider divider"
       "currentLocationTemp currentWeatherIcon"
       "currentLocationTempMinMax currentWeatherDesc";
   }
@@ -330,14 +384,20 @@ body {
     grid-area: currentLocationCity;
   }
 
+  #current-forecast .h-divider{
+    grid-area: divider;
+    margin: 0;
+    height: 2px;
+  }
+
   #current-forecast .temp {
     grid-area: currentLocationTemp;
   }
 
   #current-forecast .icon {
     grid-area: currentWeatherIcon;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     margin: 0 auto;
   }
 
